Update 영화 관객 수 예측.ipynb

--- a/영화 관객 수 예측.ipynb
+++ b/영화 관객 수 예측.ipynb
@@ -3341,4 +3341,21 @@
         "gslgbm.to_csv('gslgbm.csv', index=False)"
       ]
     },
-   
+   ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "데이콘스터디01123.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
